Added storing price values to the cache

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 #logging.level.org.springframework.web.reactive.socket=TRACE
 #logging.level.org.springframework.web.socket=TRACE
 #logging.level.org.springframework.messaging=TRACE
-logging.level.com.onedigit=DEBUG
+logging.level.com.onedigit=debug
