Added REST for event-streaming stored prices to the frontend

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
+#TODO: make correct logging with logback
 #logging.level.org.springframework.web.reactive.socket=TRACE
 #logging.level.org.springframework.web.socket=TRACE
 #logging.level.org.springframework.messaging=TRACE
-logging.level.com.onedigit=debug
+logging.level.com.onedigit=info
