Added BybitAdapter logic with REST implementation. Removed logic with sending only updates for a while.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,4 @@
 #logging.level.org.springframework.web.reactive.socket=TRACE
 #logging.level.org.springframework.web.socket=TRACE
 #logging.level.org.springframework.messaging=TRACE
-logging.level.com.onedigit=info
+logging.level.com.onedigit=debug
