UI part without spreads.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,14 @@
 #logging.level.org.springframework.web.socket=TRACE
 #logging.level.org.springframework.messaging=TRACE
 logging.level.com.onedigit=info
+logging.level.org.springframework.web=info
+
+##############################################
+#                                            #
+#                                            #
+#                 API REGION                 #
+#                                            #
+#                                            #
+##############################################
+#Only tickers that will be saved in local cache
+api.includeTickers=
