--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,4 @@
 ##############################################
 #Only tickers that will be saved in local cache
 api.includeTickers=
+management.endpoints.web.exposure.include=*
