Frontend implementation of requesting prices of specified ticker. WIP commit.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,4 +6,5 @@
 #                                            #
 ##############################################
 #Only tickers that will be saved in local cache
+#api.includeTickers=AGLD,NEAR,SDL,SDN,BTC,ETH,ETC
 api.includeTickers=
