Backend implementation of requesting prices of specified ticker. Bybit exchange. WIP commit.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+#TODO: enable/disable exchanges here instead of adapters
 ##############################################
 #                                            #
 #                                            #
@@ -8,3 +9,21 @@
 #Only tickers that will be saved in local cache
 #api.includeTickers=AGLD,NEAR,SDL,SDN,BTC,ETH,ETC
 api.includeTickers=
+
+kucoin.api.key.value=
+kucoin.api.key.secret=
+
+bybit.api.key.value=
+bybit.api.key.secret=
+
+mexc.api.key.value=
+mexc.api.key.secret=
+
+binance.api.key.value=
+binance.api.key.secret=
+
+gate.api.key.value=
+gate.api.key.secret=
+
+huobi.api.key.value=
+huobi.api.key.secret=
